# proj

./: BUILD_AND_RUN.md  CMakeLists.txt  README.md  proj.sln
circuitUI/: App.xaml  App.xaml.cs  CMakeCache.txt  CircuitSimulatorService.cs  DCResultsWindow.xaml  DCResultsWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NetlistGenerator.cs  NodeControl.xaml.cs  NodeLinker.cs  OkDialog.cs  PlotWindow.xaml  PlotWindow.xaml.cs  README.md  SimulationSettingsWindow.xaml  SimulationSettingsWindow.xaml.cs  Wire.cs  WireIntersectionHelper.cs  build.bat  build_debug.bat  circuitUI.csproj  dcTestAnalysis.cs  wpfUI.csproj
circuitUI/1/: ACVoltageSource.cs  Analysis.cs  Capacitor.cs  Circuit.cs  Component.cs  CurrentSource.cs  Diode.cs  Inductor.cs  LinearSolver.cs  Node.cs  Resistor.cs  VoltageSource.cs
include/: ACVoltageSource.h  Analysis.h  Circuit.h  CircuitSimulatorInterface.h  Component.h  Diode.h  Inductor.h  Resistor.h  VoltageSource.h  export.h
src/: ACVoltageSource.cpp  Analysis.cpp  Circuit.cpp  CircuitSimulatorInterface copy.cpp  CircuitSimulatorInterface.cpp  Component.cpp  VoltageSource.cpp
